--- a/layout/login/register.html
+++ b/layout/login/register.html
@@ -18,6 +18,7 @@
         <form>
             <input type="text" placeholder="Họ và tên" required>
             <input type="email" placeholder="Email" required>
+            <input type="sdt" placeholder="Số điện thoại" required>
             <input type="password" placeholder="Mật khẩu" required>
             <input type="password" placeholder="Nhập lại mật khẩu" required>
             <button type="submit">Đăng ký</button>
